- 04-07-04: Tidying up routine in Game unit, translating original Japanese comments in code (No functional code changes) [ChrstphrR]
- 04-07-04: Added #greaper GM command. (Grim Reaper - For scaring the kiddies). [AlexKreuz]
- 04-07-04: Fixed Stats and Options reset upon walk request, bug. [AlexKreuz]
- 04-07-04: Added Athena-Style Username_MF Registration Method Option. [AlexKreuz]
- 04-07-04: Updated Ashura, now works in combo mode.  Test this more in PvP (PvM seems OK). [Colus]
- 04-06-04: Added Support for item database effects 200, 201. [Darkhelmet]
- 04-06-04: Updated Monster AI again. [Darkhelmet]
- 04-06-04: Added Loops before Freeing some lists when Fusion closes down - reduces some of the memory leaks and dangling pointers. [ChrstphrR]
- 04-05-04: Adding more AI updates and AI Range Check errors fixes. [Darkhelmet]
- 04-05-04: Added Assign method to ItemDB class. [ChrstphrR]
- 04-05-04: Documented/clarified param/var names for Item container routines [ChrstphrR]
- 04-03-04: Adding conditional testing and proper cast time. [Darkhelmet]
- 04-03-04: Commented Out calls for monster SKills. [Darkhelmet]
- 04-03-04: Fixed the LOV and SG calculations again. [Eliot]
- 04-03-04: Removed the Debugs of monster skill descriptions, lag like hell [Eliot]
- 04-02-04: Fixed Magic Range Check Bug. Bug #284. [AlexKreuz]
- 04-02-04: Fixed Play Dead uses 5 SP to cancel effect. Bug #594. [AlexKreuz]
- 04-01-04: Added to reporting of monster skills/conditions. [Darkhelmet]
- 04-01-04: Added Debugs of Monster Skill Descriptions per monster (comment out if not wanted). [Darkhelmet]
- 03-30-04: Fixed Reset Skill Bug #141. Too many Skill Points Given. [AlexKreuz]
- 03-29-04: Added Assassin Cross's Meteor Assault (NOT fx only). [Colus]
- 03-29-04: Added HW's Napalm Vulcan (fx only). [Colus]
- 03-29-04: Added Champion's Gather Souls (NOT fx only :)). [Colus]
- 03-29-04: Added Professor's Fog Wall/Spider Web/Memorize/Mind Breaker (fx only). [Colus]